# fall2021-cs121-lab2

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  all.fish  copy-src.fish  copy-to-cluster.fish  sample-benchmark-output
report/: ref.bib  report.tex
src/: CMakeLists.txt  bench.cu  common.cpp  common.cu  common.cuh  common.hpp  cuckoo.cu  cuckoo.cuh  cuckoo_cpu.cu  cuckoo_cpu.cuh  cuckoo_gpu.cu  cuckoo_gpu.cuh  main.cu  run.cu  verify.cu
